[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "low-latency-stream-kit"
version = "0.1.0"
description = "Open-source toolkit for ingesting, archiving, and replaying FMV BAPS Realtime TSPI telemetry."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Low Latency Stream Kit Maintainers"},
]
keywords = ["nats", "jetstream", "telemetry", "tspi", "timescale"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.29.0",
    "cbor2>=5.7.0",
    "dpkt>=1.9.8",
    "jsonschema>=4.25.1",
    "nats-py>=2.11.0",
    "pydantic>=2.11.0",
    "rich>=14.1.0",
    "typer>=0.19.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
]
ui = [
    "PyQt5>=5.15.11",
    "qasync>=0.27.0",
]

[project.scripts]
tspi-producer = "producer:main"
tspi-player = "player_qt:main"
tspi-generator = "tspi_generator_qt:main"
tspi-command-console = "tspi_command_qt:main"

[tool.setuptools.packages.find]
include = ["tspi_kit"]

[tool.setuptools.package-data]
tspi_kit = ["tspi.schema.json"]

[tool.setuptools]
py-modules = [
    "producer",
    "player_qt",
    "tspi_generator_qt",
    "tspi_command_qt",
]
